Rely on ::Rails::VERSION::STRING instead of an overly complex module
* I did not know about ::Rails::VERSION::STRING until recently. It seems
  to be defined all the way back to 3.0.0, which is all we need.

--- a/lib/generators/rspec/install/templates/spec/spec_helper.rb.tt
+++ b/lib/generators/rspec/install/templates/spec/spec_helper.rb.tt
@@ -8,7 +8,7 @@ require 'rspec/autorun'
 # in spec/support/ and its subdirectories.
 Dir[Rails.root.join("spec/support/**/*.rb")].each { |f| require f }
 
-<% if RSpec::Rails.rails_version_satisfied_by?('>= 4.0.0.beta1') -%>
+<% if ::Rails::VERSION::STRING >= '4' -%>
 # Checks for pending migrations before tests are run.
 # If you are not using ActiveRecord, you can remove this line.
 ActiveRecord::Migration.check_pending! if defined?(ActiveRecord::Migration)
