Default infer_base_class_for_anonymous_controllers to true
For RSpec 3 this option should now default to true. Updated
the config value setting and the spec_helper generator template
to instead indicate the default value with the line to set it
commented out.

Fixes #869

--- a/lib/generators/rspec/install/templates/spec/spec_helper.rb.tt
+++ b/lib/generators/rspec/install/templates/spec/spec_helper.rb.tt
@@ -35,10 +35,9 @@ RSpec.configure do |config|
   # instead of true.
   config.use_transactional_fixtures = true
 
-  # If true, the base class of anonymous controllers will be inferred
-  # automatically. This will be the default behavior in future versions of
-  # rspec-rails.
-  config.infer_base_class_for_anonymous_controllers = false
+  # If false, the base class of anonymous controllers will not be inferred
+  # automatically.
+  # config.infer_base_class_for_anonymous_controllers = true
 
   # Run specs in random order to surface order dependencies. If you find an
   # order dependency and want to debug it, you can fix the order by providing
